# src/storage/api-docs/api-docs.json
@@ -994,6 +994,69 @@
                 ]
             }
         },
+        "/api/v1/meetings/{meetingId}/changes": {
+            "get": {
+                "tags": [
+                    "rootServer"
+                ],
+                "summary": "Retrieve changes for a meeting",
+                "description": "Retrieve all changes made to a specific meeting.",
+                "operationId": "getMeetingChanges",
+                "parameters": [
+                    {
+                        "name": "meetingId",
+                        "in": "path",
+                        "description": "ID of the meeting",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of changes for the meeting.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/MeetingChangeResource"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/AuthenticationError"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Meeting not found.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/NotFoundError"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bmltToken": []
+                    }
+                ]
+            }
+        },
         "/api/v1/rootservers": {
             "get": {
                 "tags": [
@@ -2467,6 +2530,82 @@
                 "items": {
                     "$ref": "#/components/schemas/Meeting"
                 }
+            },
+            "MeetingChangeResource": {
+                "properties": {
+                    "date_int": {
+                        "description": "Timestamp in integer format.",
+                        "type": "string",
+                        "example": "1728920106"
+                    },
+                    "date_string": {
+                        "description": "Human-readable date and time.",
+                        "type": "string",
+                        "example": "3:35 PM, 10/14/2024"
+                    },
+                    "change_type": {
+                        "description": "Type of change.",
+                        "type": "string",
+                        "example": "comdef_change_type_change"
+                    },
+                    "change_id": {
+                        "description": "Unique ID of the change.",
+                        "type": "string",
+                        "example": "13139"
+                    },
+                    "meeting_id": {
+                        "description": "ID of the meeting related to the change.",
+                        "type": "string",
+                        "example": "26"
+                    },
+                    "meeting_name": {
+                        "description": "Name of the meeting related to the change.",
+                        "type": "string",
+                        "example": "Just for Today 1"
+                    },
+                    "user_id": {
+                        "description": "ID of the user who made the change.",
+                        "type": "string",
+                        "example": "3"
+                    },
+                    "user_name": {
+                        "description": "Name of the user who made the change.",
+                        "type": "string",
+                        "example": "Greater New York Regional Administrator"
+                    },
+                    "service_body_id": {
+                        "description": "ID of the service body related to the meeting.",
+                        "type": "string",
+                        "example": "1005"
+                    },
+                    "service_body_name": {
+                        "description": "Name of the service body related to the meeting.",
+                        "type": "string",
+                        "example": "Bronx Area Service"
+                    },
+                    "meeting_exists": {
+                        "description": "Flag indicating if the meeting exists.",
+                        "type": "string",
+                        "example": "1"
+                    },
+                    "details": {
+                        "description": "Details about the changes.",
+                        "type": "string",
+                        "example": "email_contact was deleted. time_zone was added as America/New_York. Meeting Name was changed from Just for Today #1 to Just for Today 1."
+                    },
+                    "json_data": {
+                        "properties": {
+                            "before": {
+                                "$ref": "#/components/schemas/MeetingBase"
+                            },
+                            "after": {
+                                "$ref": "#/components/schemas/MeetingBase"
+                            }
+                        },
+                        "type": "object"
+                    }
+                },
+                "type": "object"
             },
             "RootServerBase": {
                 "properties": {
